--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.0.6",
+    "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/segmented-control": "^2.2.1",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/viewpager": "^4.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "i18next": "^19.8.4",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-i18next": "^11.7.4",
+    "react-native": "0.63.3",
+    "react-native-bootsplash": "^3.1.2",
+    "react-native-code-push": "^6.4.0",
+    "react-native-screen": "^1.0.1",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -20,13 +38,17 @@
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "module-resolver": "^1.0.0",
     "react-test-renderer": "16.13.1",
+    "styled-components": "^5.2.1",
     "typescript": "^3.8.3"
   },
   "jest": {
