--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/viewpager": "^4.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "eslint-plugin-module-resolver": "^1.1.0",
     "i18next": "^19.8.4",
     "react": "16.13.1",
     "react-i18next": "^11.7.4",
@@ -44,6 +45,8 @@
     "babel-jest": "^25.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.5.1",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "module-resolver": "^1.0.0",
