--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,10 +56,9 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-
-    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
     "paths": {
       "@Actions": ["src/Actions"],
       "@Components/*": ["src/Components/*"],
@@ -79,13 +78,19 @@
       "@Services/*": ["src/Services/*"],
       "@Services": ["src/Services"],
       "@Scenes/*": ["scenes/*"],
-      "@Test/*": ["test/*"]
+      "@Test/*": ["test/*"],
+      "@I18n1": [
+        "src/I18n1"
+      ],
+      "@I18n1/*": [
+        "src/I18n1/*"
+      ],
     }
   },
   "filesGlob": ["typings/index.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
-    "babel.config.js",
+    ".babelrc.js",
     "metro.config.js",
     "jest.config.js"
   ]
