--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clear": "watchman watch-del-all && rm -rf node_modules/ && yarn cache clean && yarn install && yarn start -- --reset-cache"
   },
   "dependencies": {
     "@ant-design/react-native": "^4.0.6",
     "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/segmented-control": "^2.2.1",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-community/viewpager": "^4.2.1",
+    "@react-navigation/core": "^5.14.4",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@types/redux-logger": "^3.0.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint-plugin-module-resolver": "^1.1.0",
@@ -25,7 +31,11 @@
     "react-native": "0.63.3",
     "react-native-bootsplash": "^3.1.2",
     "react-native-code-push": "^6.4.0",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-screen": "^1.0.1",
+    "react-native-screens": "^2.15.0",
+    "react-native-svg": "^12.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.2.2",
@@ -38,6 +48,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
