--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.2.2",
@@ -49,6 +50,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.4",
