--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^4.0.6",
+    "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/segmented-control": "^2.2.1",
     "@react-native-community/slider": "^3.0.3",
@@ -22,7 +24,11 @@
     "@react-navigation/core": "^5.14.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@reduxjs/toolkit": "^1.5.0",
     "@types/redux-logger": "^3.0.8",
+    "amazon-cognito-identity-js": "^4.5.7",
+    "aws-amplify": "^3.3.14",
+    "aws-amplify-react-native": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint-plugin-module-resolver": "^1.1.0",
@@ -33,6 +39,7 @@
     "react-native-bootsplash": "^3.1.2",
     "react-native-code-push": "^6.4.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-inappbrowser-reborn": "^3.5.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^2.15.0",
